[package]
name = "fc-rpc"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
hex = "0.4"
jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }
serde          = { version = "1.0", features = [ "derive" ] }
serde_json     = { version = "1.0" }
log = "0.4.17"
ethereum-types = "0.13"
evm = "0.35"
tracing = "0.1"
fc-consensus = { version = "2.0.0-dev", git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26" }
fc-db = { version = "2.0.0-dev", git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26" }
fc-rpc-core = { version = "1.1.0-dev", git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26" }
fc-tracer = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26" }
fp-consensus = { version = "2.0.0-dev", git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26" }
fp-rpc = { version = "3.0.0-dev", git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26" }
fp-trace-rpc = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26" }
fp-trace-apis = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26" }
fp-storage = { version = "2.0.0-dev", git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26"}
sp-io = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate" }
sp-api = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate" }
sp-storage = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate" }
sp-blockchain = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate" }
sp-core = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate" }
sp-block-builder = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool-api = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate" }
sc-service = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate" }
sc-client-api = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate" }
sc-rpc = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-network = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate" }
pallet-evm = { version = "6.0.0-dev", git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26" }
fp-evm = { version = "3.0.0-dev", git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26" }
pallet-ethereum = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26" }
ethereum = { version = "0.12", features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "3" }
rlp = "0.5"
sha3 = "0.8"
rustc-hex = { version = "2.1.0", default-features = false }
libsecp256k1 = "0.3"
rand = "0.7"
lru = "0.6.6"
parking_lot = "0.11.1"
tokio = { version = "1.14", features = [ "sync" ] }

[features]
rpc_binary_search_estimate = []
