[package]
name = "pallet-evm"
version = "6.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "FRAME EVM contracts pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }
primitive-types = { version = "0.11.1", default-features = false, features = ["rlp", "byteorder"] }
rlp = { version = "0.5", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3", default-features = false }
frame-support = { branch = "polkadot-v0.9.26", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.26", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { branch = "polkadot-v0.9.26", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-balances = { branch = "polkadot-v0.9.26", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { branch = "polkadot-v0.9.26", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.26", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { branch = "polkadot-v0.9.26", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { branch = "polkadot-v0.9.26", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-benchmarking = { branch = "polkadot-v0.9.26", git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
fp-evm = { git = "https://github.com/clover-network/frontier.git", branch = "pangwa/substrate-v0.9.26", default-features = false }
evm = { version = "0.35", default-features = false, features = ["with-codec"] }
evm-runtime = { version = "0.35", default-features = false }
evm-gasometer = { version = "0.35", default-features = false }
sha3 = { version = "0.8", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	# "frame-benchmarking/std",
	"sp-std/std",
	"fp-evm/std",
	"sha3/std",
	"rlp/std",
	"primitive-types/std",
	"evm/std",
	"evm/with-serde",
	"evm-runtime/std",
	"evm-gasometer/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"log/std",
	"hex/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
]
